# WasmEdge-WASINN-examples

.github/workflows/: build_openvino.yaml  build_openvino.yml
openvino-mobilenet-image/rust/src/: main.rs
openvino-mobilenet-raw/rust/src/: main.rs
openvino-road-segmentation-adas/: README.md  visualize_inference_result.ipynb
openvino-road-segmentation-adas/openvino-road-seg-adas/: Cargo.toml
openvino-road-segmentation-adas/openvino-road-seg-adas/src/: main.rs
pytorch-mobilenet-image/rust/: Cargo.toml
pytorch-mobilenet-image/rust/src/: main.rs
scripts/: install_openvino.sh
yolo-v3/rust/: Cargo.toml  download_yolov3.sh  yolo.cpp
yolo-v3/rust/image/: dog_1x3x416x416.bgr
yolo-v3/rust/src/: main.rs
